--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     />
 
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="./krakelogo.gif" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
